force-app/main/default/objects/Product2/fields/Chargebee_Category__c.field-meta.xml
<CustomField>
    <fullName>Chargebee_Category__c</fullName>
    <label>Chargebee Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plans</fullName>
            </value>
            <value>
                <fullName>Addons</fullName>
            </value>
            <value>
                <fullName>Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>