force-app/main/default/objects/Product2/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <inlineHelpText>EIN per Quantity 1 of SKU</inlineHelpText>
    <label>EIN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>