force-app/main/default/objects/Product2/fields/Internal_Enablement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Enablement_Notes__c</fullName>
    <label>Internal Enablement Notes</label>
    <type>TextArea</type>
</CustomField>