force-app/main/default/objects/Product2/fields/Seats__c.field-meta.xml
<CustomField>
    <fullName>Seats__c</fullName>
    <inlineHelpText>Seats per quantity 1 of SKU</inlineHelpText>
    <label>Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>