force-app/main/default/objects/Product2/fields/Special_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Terms__c</fullName>
    <label>Special Terms</label>
    <type>TextArea</type>
</CustomField>