force-app/main/default/objects/Product2/fields/X18_Digit_SFDC_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_SFDC_Product_ID__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Digit SFDC Product ID</label>
    <type>Text</type>
</CustomField>